# win-wallpaper-engine

./: .gitignore  CMakeLists.txt  README.md  build_cmake.bat  build_manual.bat  build_win.bat
shaders/: textured_ps.hlsl  textured_vs.hlsl
src/: PkgFs.cpp  PkgFs.h  Renderer.cpp  Renderer.h  SceneDocument.cpp  SceneDocument.h  TexParser.cpp  TexParser.h  VideoDecoder.cpp  VideoDecoder.h  WallpaperWindow.cpp  WallpaperWindow.h  main.cpp
